some mega updates happening right here

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "fs-extra": "^9.0.1",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.20",
-    "pretty-error": "^2.1.1"
+    "pretty-error": "^2.1.1",
+    "terminal-kit": "^1.44.0",
+    "tty-table": "^4.1.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.162",
